<resources>
    <string name="app_name">BLASTOFF</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_name">DROIDScot</string>
    <string name="skip_ahead">Tap to skip</string>
    <string name="tap_anywhere_to_continue">Double-tap to continue</string>
    <string name="ok">GOT IT!</string>
    <string name="start">START \n\nDrag and Drop</string>
    <string name="on_a_journey_through_space_and_time">Ready to launch? Help Roxy build her rocket to travel through space and time.</string>
    <string name="join_the_mission_to_mars_and_roam">Our mission is clear so meet up with Aryn to roam the Red Planet.</string>
    <string name="want_to_walk_on_the_moon">This journey has just begun but there is so much to see, learn and explore with Enid as your guide.</string>
    <string name="get_ready">Get Ready…</string>
    <string name="curiosity">Curiosity</string>
    <string name="opportunity">Opportunity</string>
    <string name="spirit">Spirit</string>
    <string name="aryn_the_astronaut_reporting_for_duty">Aryn, the Astronaut reporting for duty.</string>
    <string name="mission_to_mars">Mission To Mars</string>
    <string name="roxanne_the_rocketeer_reporting_for_duty">Roxy, the Rocketeer reporting for duty.</string>
    <string name="build_a_rocket">Build A Rocket</string>
    <string name="enid_the_explorer_reporting_for_duty">Enid, the Explorer reporting for duty.</string>
    <string name="explore_space">Explore Space</string>
    <string name="explore_the_surface_of_mars_through_a_rover_s_eyes">Explore the surface of Mars through a rover\'s eyes.</string>
    <string name="past_launches">Past\nLaunches</string>
    <string name="upcoming_launches">Upcoming\nLaunches</string>
    <string name="explore_another_world">Explore Another World</string>
    <string name="rocket_details">Rocket\nDetails</string>
    <string name="it_s_time_for_an_adventure">It\'s time for an adventure into outer space. Choose your journey below…</string>
    <string name="choose_your_journey_below">Choose your journey below…</string>
    <string name="take_flight">Take Flight</string>

</resources>
