<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/blastoff_bg"
        android:tint="@color/alpha_black02" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/top_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="@dimen/activity_padding"
                android:text="It's time for an adventure into outer space. Choose your journey below..."
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/card_rocket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/top_textview"
                app:cardCornerRadius="2dp"
                app:cardElevation="6dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/card_imageview_01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:tint="@color/alpha_black" />

                <RelativeLayout
                    android:id="@+id/card_relative_layout_01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/card_textview_01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="@dimen/activity_padding"
                        android:text="@string/roxanne_the_rocketeer_reporting_for_duty"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/card_avator_01"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_below="@id/card_textview_01"
                        android:layout_centerHorizontal="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/avator01" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/card_avator_01"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/activity_padding"
                        android:layout_marginEnd="@dimen/activity_padding"
                        android:layout_marginStart="@dimen/activity_padding"
                        android:text="@string/build_a_rocket"
                        android:textColor="@color/white"
                        android:textSize="30sp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_mars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_rocket"
                app:cardCornerRadius="2dp"
                app:cardElevation="6dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/card_imageview_02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:tint="@color/alpha_black" />

                <RelativeLayout
                    android:id="@+id/card_relative_layout_02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/card_textview_02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="@dimen/activity_padding"
                        android:text="@string/aryn_the_astronaut_reporting_for_duty"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/card_avator_02"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_below="@id/card_textview_02"
                        android:layout_centerHorizontal="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/avator03" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/card_avator_02"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/activity_padding"
                        android:layout_marginEnd="@dimen/activity_padding"
                        android:layout_marginStart="@dimen/activity_padding"
                        android:text="@string/mission_to_mars"
                        android:textColor="@color/white"
                        android:textSize="30sp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_explore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_mars"
                app:cardCornerRadius="2dp"
                app:cardElevation="6dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/card_imageview_03"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:tint="@color/alpha_black" />

                <RelativeLayout
                    android:id="@+id/card_relative_layout_03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/card_textview_03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="@dimen/activity_padding"
                        android:text="@string/enid_the_explorer_reporting_for_duty"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/card_avator_03"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_below="@id/card_textview_03"
                        android:layout_centerHorizontal="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/avator02" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/card_avator_03"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/activity_padding"
                        android:layout_marginEnd="@dimen/activity_padding"
                        android:layout_marginStart="@dimen/activity_padding"
                        android:text="@string/explore_space"
                        android:textColor="@color/white"
                        android:textSize="30sp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>

</FrameLayout>